<resources>
    <string name="app_name">Paperbank</string>
    <string name="course">Course</string>
    <string name="subject">Subject</string>
    <string name="paper">Paper</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="about">About Us</string>
    <string name="saved">Saved</string>
    <string name="request">Request</string>
    <string name="contact">Contact</string>
    <string name="request_paper">Request Paper</string>
    <string name="search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>